simple_pubsub_ws/log/build_2025-02-22_12-34-33/py_pubsub/stderr.log
  File "/home/yongjing-ub22/comms_nusmr/simple_pubsub_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/subscriber_member_function.py", line 82
    '''
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 82)

